--- a/src/main/resources/templates/admin/files.html
+++ b/src/main/resources/templates/admin/files.html
@@ -5,8 +5,8 @@
         <meta name="description" content="Система автоматической видеодетекции объектов незаконной торговли Честный Город">
         <meta charset="utf-8"/>
         <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-        <link href="css/style.css" rel="stylesheet">
-        <link href="css/foundation.min.css" rel="stylesheet">
+        <link href="/css/style.css" rel="stylesheet">
+        <link href="/css/foundation.min.css" rel="stylesheet">
     </head>
 
     <body>
@@ -15,7 +15,7 @@
             <div class="row">
                 <div class="top-bar-left">
                     <a th:href="@{/}">
-                        <img class="header_logo-s" src="./img/logo.svg">
+                        <img class="header_logo-s" src="/img/logo.svg">
                     </a>
                 </div>
             </div>
@@ -40,51 +40,29 @@
         <div class="row">
             <div class="medium-6 columns outer">
 
-        <!--<table>
-          <thead>
-            <tr>
-              <th width="30">П/Н</th>
-              <th width="350">Название файла</th>
-              <th width="50">Статус</th>
-              <th width="50">Обнаружение</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>1</td>
-              <td>This is longer content Donec id elit non mi porta gravida at eget metus.</td>
-              <td>В обработке</td>
-              <td>Не обнаружено</td>
-            </tr>
-            <tr>
-              <td>2</td>
-              <td>This is longer Content Goes Here Donec id elit non mi porta gravida at eget metus.</td>
-              <td>Обработан</td>
-              <td>Внимание!</td>
-            </tr>
-            <tr>
-              <td>3</td>
-              <td>This is longer Content Goes Here Donec id elit non mi porta gravida at eget metus.</td>
-              <td>В обработке</td>
-              <td>Не обнаружено</td>
-            </tr>
-          </tbody>
-        </table>-->
+            </div>
 
-        </div>
-        <div class="medium-6 large-5 columns">
+            <div class="medium-6 columns outer">
+                <form th:method="POST" th:action="@{/admin/files}" th:object="${content}" enctype="multipart/form-data">
+                    <span>Имя файла: </span>
+                    <input type="text" th:field="*{fileName}">
+                    <p th:if="${#fields.hasErrors('fileName')}" th:errors="*{fileName}" style="color: red">error</p>
 
-        </div>
+                    <span>Выберите файл: </span>
+                    <input type="file" th:field="*{dataFile}">
+                    <p th:if="${#fields.hasErrors('dataFile')}" th:errors="*{dataFile}" style="color: red">error</p>
 
-        <div class="column row">
-        </div>
+                    <p>
+                        <input type="submit" value="Подтвердить">
+                    </p>
+                </form>
+            </div>
 
-
-        <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-        <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
-        <script>
-            $(document).foundation();
-        </script>
+            <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+            <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
+            <script>
+                $(document).foundation();
+            </script>
         </div>
     </body>
 </html>
